RESOLVED FIXED155304
defaultActions in UIDelegate method previewingViewControllerForElement:defaultActions: need to be useable by a client
https://bugs.webkit.org/show_bug.cgi?id=155304
Summary defaultActions in UIDelegate method previewingViewControllerForElement:defaul...
Beth Dakin
Reported 2016-03-10 11:02:18 PST
defaultActions in UIDelegate method previewingViewControllerForElement:defaultActions: need to be use-able by a client <rdar://problem/24269296>
Attachments
Patch (8.42 KB, patch)
2016-03-10 11:26 PST, Beth Dakin
no flags
Patch (8.45 KB, patch)
2016-03-10 11:53 PST, Beth Dakin
no flags
Patch (21.80 KB, patch)
2016-03-10 15:45 PST, Beth Dakin
no flags
Patch (26.99 KB, patch)
2016-03-10 16:18 PST, Beth Dakin
andersca: review+
Beth Dakin
Comment 1 2016-03-10 11:26:48 PST
WebKit Commit Bot
Comment 2 2016-03-10 11:28:54 PST
Attachment 273586 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKUIDelegatePrivate.h:33: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:3901: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3 2016-03-10 11:53:20 PST
WebKit Commit Bot
Comment 4 2016-03-10 11:54:40 PST
Attachment 273591 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:3901: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 5 2016-03-10 15:45:12 PST
Beth Dakin
Comment 6 2016-03-10 16:18:11 PST
WebKit Commit Bot
Comment 7 2016-03-10 16:20:45 PST
Attachment 273646 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/_WKPreviewAction.h:34: Should have space between @property and attributes. [whitespace/property] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:3902: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 8 2016-03-10 16:37:50 PST
Comment on attachment 273646 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=273646&action=review > Source/WebKit2/UIProcess/API/Cocoa/_WKElementAction.h:64 > +- (NSString *)previewIdentifier; Why is this here? > Source/WebKit2/UIProcess/API/Cocoa/_WKPreviewAction.h:34 > +@property(nonatomic, copy, readonly) NSString *identifier; Newline before @proeprty > Source/WebKit2/UIProcess/API/Cocoa/_WKPreviewAction.h:35 > +@end Newline before @end > Source/WebKit2/UIProcess/API/Cocoa/_WKPreviewAction.h:38 > + No newline!
Beth Dakin
Comment 9 2016-03-10 16:47:49 PST
I addressed all of the comments: http://trac.webkit.org/changeset/197973 Thanks Anders!!
mitz
Comment 10 2016-03-10 19:44:40 PST
Why are we exposing both the class and the protocol in a private header? Can the class remain an internal implementation detail?
Beth Dakin
Comment 11 2016-03-11 10:43:07 PST
(In reply to comment #10) > Why are we exposing both the class and the protocol in a private header? Can > the class remain an internal implementation detail? Patch posted: https://bugs.webkit.org/show_bug.cgi?id=155370 Good catch, Dan!
Note You need to log in before you can comment on or make changes to this bug.