Source/WebKit2/UIProcess/ios/WKContentViewInteraction.h
@@ -123,6 +123,7 @@ struct WKAutoCorrectionData {
     RetainPtr<UIGestureRecognizer> _previewSecondaryGestureRecognizer;
 #if HAVE(LINK_PREVIEW)
     RetainPtr<UIPreviewItemController> _previewItemController;
+    BOOL _uiDelegateProvidedPreviewingViewController;
 #endif
 
     std::unique_ptr<WebKit::SmartMagnificationController> _smartMagnificationController;
